--- a/Basic JavaScript Projects/Basic_JavaScript_projects/Project2_functions/index.html
+++ b/Basic JavaScript Projects/Basic_JavaScript_projects/Project2_functions/index.html
@@ -8,14 +8,18 @@
 <body>
     <button onclick="My_First_Function()" id="Green_Text"><!--turns the resoponse text green-->
         Click me!
-    <button onclick="this.innerHTML=Date()">time</button> <!--html only will deplay the date and time inside of the button-->
+    <button onclick="this.innerHTML=Date()">date/time</button> <!--html only will deplay the date and time inside of the button-->
     
     
     <p>
         Click on button for todays date and time.   <!--using HTML and java will display date and time outside of button once it is clicked-->
     </p>
-    <button onclick="displayDate()">date and time is?</button>
-<p id="demo"></p>
+    <button onclick="displayDate()">click this button for date and time</button>
+    <p id="time/date"></p>
+
+
+    <p id="Concatenate" onclick="myFunction()">Click right Here!!</p> <!--creates a clickable word, does not look like a button,but works in the same way-->
+
 
 
    
