Project5_comparisons_type_coercion

--- a/Basic JavaScript Projects/Basic_JavaScript_projects/Project4_dictionaries/index.html
+++ b/Basic JavaScript Projects/Basic_JavaScript_projects/Project4_dictionaries/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
  <script src="JS/main.js"></script>
-<p id="Dictionary" onclick="my_Dictionary()">Click me for a Dictionary!</p>
+<p id="Dictionary" onclick="my_Dictionary()">Click me for a Dictionary!</p> <!--link to my JS Dictionary-->
 
 </body>
 </html>
